package es.us.meerkat.backend.entity;

public enum EstadoComunidad {
  ACTIVA,
  ELIMINADA,
  SUSPENDIDA
}
