package es.us.meerkat.backend.entity;

public enum EstadoSolicitud {
  PENDIENTE,
  ACEPTADA,
  RECHAZADA
}
