package es.us.meerkat.backend.entity;

public enum TipoGrupo {
  COMUNIDAD_PUBLICA,
  GRUPO_PRIVADO
}
